demux: mp4: add minimal support for exclusive tracks

VLC supports groups where mp4 defines switch groups.
As an es can't belong to multiple groups, but does in
switch groups, we don't really have a way to provide
the same track exclusion/alternative features without
duplicating es.

Priorities are then set in a way es/tracks from the same
cat/switchgroup are not all selected.

refs #3970