modules/demux/mp4/mp4.h
@@ -70,6 +70,7 @@ typedef struct
     int b_enable;           /* is the trak enable by default */
     bool b_selected;  /* is the trak being played */
     bool b_chapter;   /* True when used for chapter only */
+    uint32_t i_switch_group;
 
     bool b_mac_encoding;
 
